--- a/riot/templates/base.html
+++ b/riot/templates/base.html
@@ -10,6 +10,8 @@
 
     <meta charset="utf-8">
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     
     {%if title%}
@@ -35,6 +37,8 @@
     {% block scripts %}
     
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+        
+        <script language="javascript" type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         
         {% bootstrap_javascript %} 
         
